# text-to-sparql-dblp

./: .env.example  .gitignore  .windsurfrules  README.md  main.py  pyproject.toml
steps/: step_1a_analyze_query.py
tmp/: dblp-sparql-endpoint.py  extract_queries.txt  extract_querys.py  extract_questions.txt
